5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1679_1100.log
== TEST (2019-04-24 23:34:24) 
-- CODE:
cedula = int(input("Valor da cedula: "))

if (cedula == 2):
	Animal == "Tartaruga"
elif (cedula == 5):
	Animal == "Garça"
else:
	Animal = "Invalido"
-- ERROR:
File "XXXX", line 20
    if x != "equilatero" and x != "isosceles" and x != "escaleno"
                                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:34:41) 
-- CODE:
cedula = int(input("Valor da cedula: "))

if (cedula == 2):
	Animal == "Tartaruga"
elif (cedula == 5):
	Animal == "Garça"
else:
	Animal = "Invalido"
	
print (Animal)
-- OUTPUT:
Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:35:31) 
-- CODE:
cedula = int(input("Valor da cedula: "))

if (cedula == 2):
	Animal == "Tartaruga"
elif (cedula == 5):
	Animal == "Garça"
else:
	Animal = "Invalido"

print (cedula)
print (Animal)
-- OUTPUT:
100
Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:36:05) 
-- CODE:
cedula = int(input("Valor da cedula: "))

if (cedula == 2):
	Animal == "Tartaruga"
elif (cedula == 5):
	Animal == "Garça"
else:
	Animal = "Invalido"

print ("Entrada: ", cedula)
print ("Animal: ", Animal)
-- OUTPUT:
Entrada:  100
Animal:  Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:37:18) 
-- CODE:
cedula = int(input("Valor da cedula: "))

if (cedula == 2):
	Animal == "Tartaruga"
elif (cedula == 5):
	Animal == "Garça"
elif (cedula == 10):
	Animal == "Arara"
elif (cedula == 20):
	Animal == "Mico-leão-dourado"
elif (cedula == 50):
	Animal == "Onça-pintada"
elif (cedula == 100):
	Animal == "Garoupa"
else:
	Animal = "Invalido"

print ("Entrada: ", cedula)
print ("Animal: ", Animal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    Animal == "Garoupa"
NameError: name 'Animal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:37:48) 
-- CODE:
cedula = int(input("Valor da cedula: "))

if (cedula == 2):
	Animal == "Tartaruga"
elif (cedula == 5):
	Animal == "Garça"
elif (cedula == 10):
	Animal == "Arara"
elif (cedula == 20):
	Animal == "Mico-leao-dourado"
elif (cedula == 50):
	Animal == "Onca-pintada"
elif (cedula == 100):
	Animal == "Garoupa"
else:
	Animal = "Invalido"

print ("Entrada: ", cedula)
print ("Animal: ", Animal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    Animal == "Garoupa"
NameError: name 'Animal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:38:27) 
-- CODE:
cedula = int(input("Valor da cedula: "))

if (cedula == 2):
	Animal == "Tartaruga"
elif (cedula == 5):
	Animal == "Garça"
elif (cedula == 10):
	Animal == "Arara"
elif (cedula == 20):
	Animal == "Mico-leao-dourado"
elif (cedula == 50):
	Animal == "Onca-pintada"
elif (cedula == 100):
	Animal == "Garoupa"
else:
	Animal = "Invalido"

print ("Entrada: ", cedula)
print ("Animal: ", Animal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    Animal == "Garoupa"
NameError: name 'Animal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:39:05) 
-- CODE:
cedula = int(input("Valor da cedula: "))

if (cedula == 2):
	Animal = "Tartaruga"
elif (cedula == 5):
	Animal = "Garça"
elif (cedula == 10):
	Animal = "Arara"
elif (cedula == 20):
	Animal = "Mico-leao-dourado"
elif (cedula == 50):
	Animal = "Onca-pintada"
elif (cedula == 100):
	Animal = "Garoupa"
else:
	Animal = "Invalido"

print ("Entrada: ", cedula)
print ("Animal: ", Animal)
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 23:39:14) 
-- CODE:
cedula = int(input("Valor da cedula: "))

if (cedula == 2):
	Animal = "Tartaruga"
elif (cedula == 5):
	Animal = "Garça"
elif (cedula == 10):
	Animal = "Arara"
elif (cedula == 20):
	Animal = "Mico-leao-dourado"
elif (cedula == 50):
	Animal = "Onca-pintada"
elif (cedula == 100):
	Animal = "Garoupa"
else:
	Animal = "Invalido"

print ("Entrada: ", cedula)
print ("Animal: ", Animal)
-- EXECUTION TIME:
0.141106
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal:  Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal:  Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal:  Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 12:23:16) 
-- CODE:
cedula = int(input("Valor da cedula: "))

if (cedula == 2):
	Animal = "Tartaruga"
elif (cedula == 5):
	Animal = "Garça"
elif (cedula == 10):
	Animal = "Arara"
elif (cedula == 20):
	Animal = "Mico-leao-dourado"
elif (cedula == 50):
	Animal = "Onca-pintada"
elif (cedula == 100):
	Animal = "Garoupa"
else:
	Animal = "Invalido"

print ("Entrada: ", cedula)
print ("Animal: ", Animal)
-- EXECUTION TIME:
0.221391
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal:  Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal:  Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal:  Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
